--- a/github-readme-generator/index.html
+++ b/github-readme-generator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/android-chrome-512x512.png" />
-    <title>GitHub Readme Generator</title>
+    <title>GitHub README Generator</title>
   </head>
   <body>
     <div id="root"></div>
